--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 
+DATABASE_URL="postgresql://postgres:Bleedingedge20030@db.bxubjfdkrljzuvwiyjrl.supabase.co:5432/postgres?sslmode=require"
 
-   ADMIN_WALLET=0x2de9fc192ef7502e7113db457e01cc058d25b32b
+ADMIN_WALLET=0x2de9fc192ef7502e7113db457e01cc058d25b32b
    
    
+NEYNAR_API_KEY=4108AD79-6DC8-4EFF-B808-41A37EC41595
