--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "db:studio": "prisma studio",
     "db:test": "node scripts/test-db-connection.js",
     "seed:admin": "npx tsx scripts/seed-admin.ts",
-    "generate:miniapps": "npx tsx scripts/generateMiniappsSeed.ts"
+    "generate:miniapps": "npx tsx scripts/generateMiniappsSeed.ts",
+    "export:apps": "node scripts/export-my-apps.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
