Fix admin portal detection and database environment variable loading
- Fixed admin role detection in UserProfile component
- Added wallet address normalization to prevent duplicate records
- Updated Prisma scripts to load from .env.local first
- Added database health check and admin verification scripts
- Fixed API routes to properly return adminRole field
- Added cache-busting to prevent stale admin status
- Updated .gitignore to allow .env (with only ADMIN_WALLET)
- Added import:seed script for bulk data import

--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,7 @@ out/
 .vercel
 
 # Environment variables
-.env
+# .env is allowed (contains only ADMIN_WALLET, safe to commit)
 .env.local
 .env*.local
 !.env.example
@@ -45,11 +45,6 @@ out/
 out/
 build/
 dist/
-
-# Environment variables
-.env
-.env.local
-.env*.local
 
 # Build artifacts
 *.log
