--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate",
-    "db:generate": "prisma generate",
-    "db:push": "prisma db push",
-    "db:migrate": "prisma migrate dev",
-    "db:studio": "prisma studio",
+    "postinstall": "node scripts/run-prisma.js generate",
+    "db:generate": "node scripts/run-prisma.js generate",
+    "db:push": "node scripts/run-prisma.js db push",
+    "db:migrate": "node scripts/run-prisma.js migrate dev",
+    "db:studio": "node scripts/run-prisma.js studio",
     "db:test": "node scripts/test-db-connection.js",
     "seed:admin": "npx tsx scripts/seed-admin.ts",
+    "check:admin": "npx tsx scripts/check-admin.ts",
     "import:seed": "npx tsx scripts/import-seed.ts",
     "generate:miniapps": "npx tsx scripts/generateMiniappsSeed.ts",
     "export:apps": "node scripts/export-my-apps.js"
