--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "fix:review-counts": "npx tsx scripts/fix-review-counts.ts"
   },
   "dependencies": {
+    "@farcaster/miniapp-sdk": "^0.2.1",
     "@hookform/resolvers": "^3.10.0",
     "@prisma/client": "^5.19.0",
     "@radix-ui/react-accordion": "^1.2.11",
