--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@farcaster/miniapp-sdk": "^0.2.1",
+    "@farcaster/miniapp-wagmi-connector": "^1.1.0",
     "@hookform/resolvers": "^3.10.0",
     "@prisma/client": "^5.19.0",
     "@radix-ui/react-accordion": "^1.2.11",
@@ -64,6 +65,7 @@
     "next": "^14.2.0",
     "next-themes": "^0.3.0",
     "prisma": "^5.19.0",
+    "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
