--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,4 @@
 {
-  "crons": [
-    {
-      "path": "/api/cron/fetch-x-tweet",
-      "schedule": "0 0 * * *"
-    },
-    {
-      "path": "/api/cron/fetch-social-casts",
-      "schedule": "0 12 * * *"
-    }
-  ]
+  "crons": []
 }
 
