Add Base login, Farcaster webhook, and fix multiple issues
- Add Base login button with Coinbase Keys integration
- Create Farcaster webhook endpoint for Base notifications
- Add Open in Farcaster button for all apps
- Fix saved apps loading timeout issues
- Fix Base login popup appearing repeatedly on desktop
- Fix admin portal access on mobile Base App
- Fix developer verification signature handling for mobile
- Update logo.webp and add upload script
- Fix TypeScript build errors
- Improve error handling and user feedback

--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "cleanup:png-images": "npx tsx scripts/cleanup-png-images.ts",
     "cleanup:png-images:dry": "npx tsx scripts/cleanup-png-images.ts --dry-run",
     "upload:badge": "npx tsx scripts/upload-badge-image.ts",
+    "upload:logo": "npx tsx scripts/upload-logo-to-blob.ts",
     "optimize:images": "npx tsx scripts/pre-optimize-images.ts",
     "migrate:all-to-blob": "npx tsx scripts/migrate-all-images-to-blob.ts",
     "migrate:uploads-to-blob": "npx tsx scripts/migrate-uploads-to-blob.ts"
   },
   "dependencies": {
     "@coinbase/onchainkit": "^1.1.2",
+    "@farcaster/miniapp-node": "^0.1.11",
     "@farcaster/miniapp-sdk": "^0.2.1",
     "@farcaster/miniapp-wagmi-connector": "^1.1.0",
     "@hookform/resolvers": "^3.10.0",
